--- a/index.html
+++ b/index.html
@@ -3,8 +3,18 @@
 
 <head>
     <title>WebChat Game</title>
+    <h1>WebChat Game</h1>
+    <link rel="stylesheet" href="index.css">
 </head>
+<body>
+    <div class="game-frame">
+        <!-- Your game content goes here -->
+    </div>
+</body>
+
+</html>
 
 <body>
-    
+
 </body>
+</html>
