--- a/index.html
+++ b/index.html
@@ -1,20 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-    <title>WebChat Game</title>
-    <h1>WebChat Game</h1>
-    <link rel="stylesheet" href="index.css">
+    <title>My Webpage</title>
 </head>
 <body>
-    <div class="game-frame">
-        <!-- Your game content goes here -->
+    <h1>Welcome to My Webpage</h1>
+    <p>This is a basic HTML webpage.</p>
+    <div id="game-frame">
     </div>
-</body>
-
-</html>
-
-<body>
-
 </body>
 </html>
