--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Webpage</title>
+    <title>WebChat Game</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-    <h1>Welcome to My Webpage</h1>
-    <p>This is a basic HTML webpage.</p>
+    <header>
+        <h1>WebChat Game</h1>
+    </header>
     <div id="game-frame">
     </div>
 </body>
