--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
         <h1>WebChat Game</h1>
     </header>
     <div id="game-frame">
+    <div id="landing-page">
+        <h2>Welcome to the game!</h2>
+        <button id="start-button">Start</button>
+    </div>
+</div>
+</body>
+</html>
         
     </div>
 </body>
