--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div id="landing-page">
         <h2>Welcome to the game!</h2>
         <button id="start-button">Start</button>
+        <div id="game-title">Title</div>
     </div>
 </div>
 </body>
