--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>WebChat Game</title>
     <link rel="stylesheet" type="text/css" href="index.css">
+    <script src="index.js"></script>
 </head>
 <body>
     <header>
@@ -11,7 +12,7 @@
     <div id="game-frame">
     <div id="landing-page">
         <h2>Welcome to the game!</h2>
-        <button id="start-button">Start</button>
+        <button id="start-button" onclick="startGame()">Start</button>
         <div id="game-title">Title</div>
     </div>
 </div>
