--- a/game.html
+++ b/game.html
@@ -18,6 +18,8 @@
             <div class="lane"></div>
             <div class="lane"></div>
             <img src="Assets/redCar.png" alt="Red Car" id="car">
+            <img src="Assets/roadClosed.png" alt="Road Closed" id="roadClosed">
+            <img src="Assets/potHole.png" alt="Pothole" id="potHole">
         </div>
     </div>
 </body>
