--- a/game.html
+++ b/game.html
@@ -3,7 +3,9 @@
 <head>
     <title>Game</title>
     <link rel="stylesheet" type="text/css" href="game.css">
-    <script src="game.js"></script>
+    <script src="moveCar.js"></script>
+    <script src="obstacles.js"></script>
+    <script src="collisionLogic.js"></script>
 </head>
 <body>
     <div id="game-container">
@@ -18,8 +20,6 @@
             <div class="lane"></div>
             <div class="lane"></div>
             <img src="Assets/redCar.png" alt="Red Car" id="car">
-            <img src="Assets/roadClosed.png" alt="Road Closed" id="roadClosed">
-            <img src="Assets/potHole.png" alt="Pothole" id="potHole">
         </div>
     </div>
 </body>
