--- a/game.html
+++ b/game.html
@@ -6,13 +6,14 @@
     <script src="moveCar.js"></script>
     <script src="obstacles.js"></script>
     <script src="collisionLogic.js"></script>
+    <script src="time.js"></script>
 </head>
 <body>
     <div id="game-container">
         <div id="score">Score: 0</div>
         <div id="speed">Speed: 0</div>
         <div id="position">Position: 0 / 0</div>
-        <div id="time">Time Elapsed: 00:00s</div>
+        <div id="time">Time Elapsed: <span id="timer">00:00</span></div>
         <img src="Assets/HDlogo.png" alt="HD Logo" id="logo">
         <div class="line"></div>
         <div id="road">
