--- a/game.html
+++ b/game.html
@@ -12,7 +12,7 @@
     <div id="game-container">
         <div id="score">Score: 0</div>
         <div id="speed">Speed: 0</div>
-        <div id="position">Position: 0 / 0</div>
+        <div id="position">Position in queue: 0 / 0</div>
         <div id="time">Time Elapsed: <span id="timer">00:00</span></div>
         <img src="Assets/HDlogo.png" alt="HD Logo" id="logo">
         <div class="line"></div>
