--- a/game.html
+++ b/game.html
@@ -7,6 +7,29 @@
     <script src="obstacles.js"></script>
     <script src="collisionLogic.js"></script>
     <script src="time.js"></script>
+    <script>
+        // Function to play the starting beep
+        function playStartingBeep() {
+            var audio = new Audio('startingBeep.mp3');
+            audio.play();
+            // After the starting beep finishes, play game music
+            audio.onended = function() {
+                playGameMusic();
+            };
+        }
+
+        // Function to play game music
+        function playGameMusic() {
+            var gameMusic = new Audio('gameMusic.mp3');
+            gameMusic.loop = true; // Loop the game music
+            gameMusic.play();
+        }
+
+        // Call the function to play starting beep when the page loads
+        window.onload = function() {
+            playStartingBeep();
+        };
+    </script>
 </head>
 <body>
     <div id="game-container">
