Outline on logo

--- a/game.html
+++ b/game.html
@@ -14,7 +14,7 @@
         <div id="speed">Speed: 0</div>
         <div id="position">Position in queue: 0 / 0</div>
         <div id="time">Time Elapsed: <span id="timer">00:00</span></div>
-        <img src="Assets/HDlogo.png" alt="HD Logo" id="logo">
+        <img src="Assets/normalLogo.png" alt="HD Logo" id="logo">
         <div class="line"></div>
         <div id="road">
             <div class="lane"></div>
